Remove max-width from root div and align components correctly

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,8 +13,6 @@ p {
 }
 
 body {
-  // max-width: 86%;
-  // margin: auto;
   margin: 0;
 }
 
@@ -23,7 +21,6 @@ body {
 }
 
 #root {
-  max-width: 86%;
   margin: 0 auto;
   min-height: 100vh;
 }
